# gBoy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp
src/core/: Bus.cpp  Bus.h  CPU.cpp  CPU.h
